--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -7,13 +7,11 @@
   <body>
     <h1>Best Chocolate Chip Cookies</h1>
     <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" />
-    <p>
-      This recipe is from my dad and they are a favorite among friends and
+    <p>This recipe is from my dad and they are a favorite among friends and
       family. The secret ingredient is the coconut! <em>Be warned</em>, these
-      will fly off of the plate!
-    </p>
+      will fly off of the plate!</p>
     <h3>History of cookies</h3>
-    <p>Most people don't know the complicated past of the cookie.</p>
+    <p>Most people don't know the complicated past of the cookie.</p>    
     <h2>Ingredients</h2>
     <ul>
       <li>Butter</li>
@@ -37,9 +35,7 @@
       <li>Stir in chocolate chips, oatmeal and coconut.</li>
       <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
     </ol>
-    <p>
-      <a href="http://allrecipes.com">Click here</a> to check out my other great
-      recipes.
-    </p>
+    <p><a href="http://allrecipes.com">Click here to check out my other great
+      recipes.</a></p>
   </body>
 </html>
